[package]
name = "klend-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "^1.0"
num-derive = "^0.4"
num-traits = "^0.2"
thiserror = "^2.0"
solana-account = "^2.1"
solana-account-info = "^2.1"
solana-client = { version = "^2.1", optional = true }
solana-cpi = "^2.1"
solana-instruction = "^2.1"
solana-program-error = "^2.1"
solana-pubkey = "^2.1"
serde = { version = "^1.0", optional = true, features = ["derive"] }
serde-with = { version = "^3.0", optional = true }
serde_big_array = { version = "^0.5", optional = true }

[features]
default = []
fetch = ["solana-client"]
serde = ["dep:serde", "dep:serde-with", "dep:serde_big_array"]
anchor = []
anchor-idl-build = []
